1.1.0 () -

------ current release ---------------------------

1.0.0 (2014-12-21) 5934dfcefac6d037a359bc733a8382e42e32552e

- TS-1 Apostrophe inside tasksh 'log' causes segmentation fault (thanks to
       David Stahl).
- TS-2 tasksh segfaults if quotes not closed (thanks to Fidel Mato).
- TS-5 tasksh segfaults (thanks to David Patrick).
- TS-13 Quotes included when using task shell (thanks to Kevin Gunn).
- libreadline support added for line editing and command history.

------ start -----------------------------------

Project started 2014-06-08
