@@ -1,18 +1,25 @@
 
 New Features in tasksh 1.1.0
 
+  - Context support
 
 New commands in tasksh 1.1.0
 
+  - 'context' command adds a context, which is a filter term
+  - 'leave' removes the most recently added context
+  - 'clear' removes all contexts
 
 New configuration options in tasksh 1.1.0
 
+  - None
 
 Newly deprecated features in tasksh 1.1.0
 
+  - None
 
 Removed features in 1.1.0
 
+  - None
 
 Known Issues
 
